# bilby_pipe

./: .dictionary.txt  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.rst  gracedb_to_json.py  optional_requirements.txt  run_from_cache.py  setup.cfg  setup.py
bilby_pipe/: __init__.py  analyse_interferometer_list.py  auto_prior.py  bilby_pipe.py  bilbyargparser.py  compute_roq_weights.py  create_injections.py  data_analysis.py  data_generation.py  determine_mchirp_prior.py  generate_interferometer_list.py  gracedb.py  gw_data_find.py  input.py  ligo_skymap.py  main.py  overview.py  parser.py  plot.py  plotting_utils.py  pp_test.py  pp_tests.py  review.py  script_helper.py  singularity.py  slurm.py  summary.py  utils.py  webpages.py  xml_converter.py
containers/: Dockerfile-test-suite-python35  Dockerfile-test-suite-python36  Dockerfile-test-suite-python37  Singularity.0.0.3  Singularity.dev  TestSuiteDockerfile
docs/: Makefile  conf.py  create_injections.txt  customisation.rst  data_analysis.txt  data_generation.txt  examples.rst  examples.txt  gracedb.txt  index.rst  index.txt  ini_file.txt  injections.txt  installation.rst  installation.txt  main.rst  main.txt  make_default_prior_plot.py  osg.rst  requirements.txt  running.txt  script_helper.txt  singularity.rst  singularity.txt  structure.rst  structure.txt  user-interface.rst  user-interface.txt  utils.txt  webpages.txt
example_ini_files/: GW150914.ini  GW150914.prior  GW151012.ini  GW151226.ini  GW170104.ini  GW170608.ini  GW170729.ini  GW170809.ini  GW170814.ini  bns.prior  (+13 more)
(+141 files in other folders)
